<resources>
    <string name="app_name">layouts</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="middle_name">Middle name</string>
    <string name="dob">dob</string>
    <string name="save">save</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="textview">LOGIN</string>
    <string name="usernname">USERNNAME</string>
    <string name="password">PASSWORD</string>
    <string name="name">name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="enter">ENTER</string>
</resources>
