<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="BOOK IT"
        android:textSize="19sp"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimaryDark"
        android:gravity="top|center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SIGN UP"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="15dp"/>
        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:textSize="20sp"

         />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/middle_name"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:textSize="20sp"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:textSize="20sp"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:textSize="20sp"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="PASSWORD"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:textSize="20sp"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CONFIRM PASSWORD"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:textSize="20sp"

        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="50dp"
        android:text="@string/save"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorPrimary"/>
</LinearLayout>
</ScrollView>